organizing moved tilemap into a class moved animapted objects into class resource manager for spriter data basic map collision

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ import com.badlogic.gdx.tools.texturepacker.TexturePacker
 task texturePacker << {
 	logger.info "Calling TexturePacker: "+texturePacker
 	TexturePacker.process("art/guy", "core/assets", "guy/guy")
+	TexturePacker.process("art/alien", "core/assets", "alien/alien")
 }	
 
 
