Running around (tile based) Pathfinding Userinterface (target indicator, block indicator, target indicator) Blaster sound (not ingame yet)

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ task texturePacker << {
 	logger.info "Calling TexturePacker: "+texturePacker
 	TexturePacker.process("art/guy", "core/assets", "guy/guy")
 	TexturePacker.process("art/alien", "core/assets", "alien/alien")
+	TexturePacker.process("art/sprites", "core/assets", "sprites")
 }	
 
 
