space station terrain bugfix: guy light on restart was missing

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ task texturePacker << {
 	TexturePacker.process("art/guy", "core/assets", "guy/guy")
 	TexturePacker.process("art/alien", "core/assets", "alien/alien")
 	TexturePacker.process("art/sprites", "core/assets", "sprites")
+    TexturePacker.process("art/ground/tiles", "core/assets", "world/world")
 }	
 
 
