--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ import com.badlogic.gdx.tools.texturepacker.TexturePacker
 task texturePacker << {
 	logger.info "Calling TexturePacker: "+texturePacker
 	TexturePacker.process("art/guy", "core/assets", "guy/guy")
+    TexturePacker.process("art/effects", "core/assets", "effects/effects")
 	TexturePacker.process("art/alien", "core/assets", "alien/alien")
 	TexturePacker.process("art/sprites", "core/assets", "sprites")
     TexturePacker.process("art/ground/tiles", "core/assets", "world/world")
